2003-03-28  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-replaceoldprinterids.in: Script to replace references
	  to old numerical PostGreSQL (or otherwise obsolete) printer IDs
	  by the current ones.

	* configure.in, Makefile.in: Added build instructions for new
	  "foomatic-replaceoldprinterids" script.

	* README: Documentation for new "foomatic-replaceoldprinterids"
	  script.

	* USAGE: Adapted for new printer IDs, bug fix in example for PDQ,
	  raised version to 3.0.0rc1.

2003-03-27  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-nonumericalids.in: Script to change the old numerical
	  PostGreSQL printer IDs in the installed Foomatic database to new
	  clear-text printer IDs.

	* configure.in, Makefile.in: Added build instructions for new
	  "foomatic-nonumericalids" script.

	* README: Documentation for new "foomatic-nonumericalids" script,
	  raised version to 3.0.0rc1.

	* foomatic-configure.in, foomatic-ppdfile.in, lib/Foomatic/DB.pm:
	  Added facility to translate old numerical printer IDs to the new
	  clear-text IDs.

2003-03-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.0beta2. 
	  Tag name: "foomatic-db-engine-3_0_0beta2".

	* README, USAGE: Updated for version 3.0.0beta2.
	
2003-03-10  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Fixed bug of USB device files names not
	  correctly sorted by "cups_generate_usb_device_lists()" function.
	  This cause wrong make/model-related URIs to be assigned to the
	  device files (at least with three or more connected USB
	  printers).

2003-03-05  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: completed support for
	  "FoomaticRIPDefault..." keywords in numerical options (see
  http://www.linuxprinting.org/pipermail/foomatic-devel/2003q1/001250.html).

	* README: Documented "FoomaticRIPDefault..." PPD keyword.

2003-02-25  Till Kamppeter <till.kamppeter@gmx.net>
